# codegen-infra

./: .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  DESIGN.md  ISSUES.md  PLANS.md  README.md  tasks.md
.claude/rules/shared/: README.md  update-all.sh
.claude/rules/shared/api/: aipdev.md  docsguide.md
.claude/rules/shared/common/: code-standards.md  rust-quality.md
.claude/rules/shared/workflows/: session-management.md
.github/workflows/: ci.yml
codegen-core/: Cargo.toml
codegen-core/src/: code_writer.rs  error.rs  lib.rs  reserved_words.rs
codegen-core/src/ir/: field.rs  message.rs  mod.rs  schema.rs  service.rs  type.rs
codegen-flatbuffers/: Cargo.toml
codegen-flatbuffers/src/: lib.rs
codegen-protobuf/: Cargo.toml
codegen-protobuf/src/: lib.rs
codegen-quiver/: Cargo.toml
codegen-quiver/src/: lib.rs
codegen-schema/: Cargo.toml
codegen-schema/src/: lib.rs  schema.rs  type.rs
codegen-writers/: Cargo.toml
codegen-writers/src/: dart.rs  lib.rs  rust.rs  typescript.rs
codegen-writers/tests/: integration_tests.rs
docs/: code-quality-findings.md
